--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,34 @@
 body {
   margin: 0;
+  overflow: hidden;
   font-family: sans-serif;
-  overflow: auto;
-  scroll-behavior: smooth;
 }
 
-.center {
+h1 {
+  margin: 0;
+  padding: 25px;
   text-align: center;
-}
-
-.center h1 {
-  font-size: 35px;
-  background-color: rgb(65, 73, 102);
+  font-weight: normal;
+  font-size: 40px;
+  background-color: rgb(70, 77, 102);
   color: #fff;
-  padding: 15px;
-}
-
-.center .logo {
-  width: 140px;
 }
 
 .buttons {
-  font-size: 25px;
-  text-align: center;
+  display: flex;
   justify-content: center;
-  margin-top: 75px;
+  margin-top: 70px;
+  text-align: center;
+  font-size: 25px;
 }
 
 .buttons .afip {
-  text-decoration: none;
-  color: #fff;
+  margin-right: 120px;
+  padding: 30px 5px;
+  width: 400px;
   background-color: rgb(96, 95, 104);
-  border-radius: 50px;
-  padding: 15px 35px;
-  margin-right: 180px;
+  color: #fff;
+  text-decoration: none;
 }
 
 .buttons .afip:hover {
@@ -41,11 +36,11 @@ body {
 }
 
 .buttons .mail {
-  text-decoration: none;
-  color: #fff;
+  padding: 30px 5px;
+  width: 400px;
   background-color: rgb(89, 88, 95);
-  border-radius: 50px;
-  padding: 15px 40px;
+  color: #fff;
+  text-decoration: none;
 }
 
 .buttons .mail:hover {
@@ -53,33 +48,34 @@ body {
 }
 
 .details {
-  line-height: 26px;
   display: flex;
   justify-content: center;
+  line-height: 33px;
+  font-weight: inherit;
+  font-size: 17px;
 }
 
 .details .detail-afip {
-  background-color: rgba(195, 209, 235, 0.836);
-  margin-top: 50px;
+  margin-right: 120px;
   justify-content: center;
-  margin-right: 150px;
-  margin-left: 6.5px;
+  width: 400px;
+  background-color: rgba(121, 124, 129, 0.199);
 }
 
 .details .detail-afip ol {
-  list-style-type: disc;
+  padding: 5px 30px;
   text-align: left;
-  padding: 20px 35px;
+  list-style-type: disc;
 }
 
 .details .detail-mail {
-  background-color: rgba(195, 209, 235, 0.836);
-  margin-top: 50px;
   justify-content: center;
+  width: 400px;
+  background-color: rgba(121, 124, 129, 0.199);
 }
 
 .details .detail-mail ol {
-  list-style-type: disc;
+  padding: 5px 30px;
   text-align: left;
-  padding: 20px 24px;
+  list-style-type: disc;
 }
